--- a/index.html
+++ b/index.html
@@ -1,43 +1,37 @@
-<!DOCTYPE html>
-<html lang="zh">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cloudflare Pages IPTV 播放器</title>
-    <link href="https://vjs.zencdn.net/8.5.2/video-js.css" rel="stylesheet" />
-    <link href="style.css" rel="stylesheet" />
-</head>
-<body>
+<div>
+    <input type="text" id="iptv-url" placeholder="输入 M3U 订阅链接">
+    <button id="load-playlist">加载列表</button>
+</div>
 
-    <header>
-        <h1>Cloudflare IPTV 播放器</h1>
-        <div id="url-input-area">
-            <input type="url" id="iptv-url" placeholder="输入 M3U 订阅链接" value="" />
-            <button id="load-playlist">加载频道</button>
-            <span id="status-message"></span>
-        </div>
-    </header>
+<div style="margin-top: 10px;">
+    <input type="text" id="direct-url" placeholder="输入 M3U8/HLS 链接直接播放">
+    <button id="direct-play">直接播放</button>
+</div>
 
-    <main id="app-container">
-        <aside id="channel-list">
-            <h2>频道列表</h2>
-            <ul id="channels">
-                <p>请先输入 M3U 链接并点击加载。</p>
-            </ul>
-        </aside>
+<ul id="channels">
+    </ul>
 
-        <section id="player-container">
-            <video id="tv-player" class="video-js vjs-default-skin" controls preload="auto" width="100%" height="auto" poster="">
-                <p class="vjs-no-js">
-                    要查看此视频，请启用 JavaScript，并考虑升级到支持 HTML5 视频的 Web 浏览器。
-                </p>
-            </video>
-        </section>
-    </main>
-
-    <script src="https://cdn.jsdelivr.net/npm/hls.js@1.5.0/dist/hls.min.js"></script>
-    <script src="https://vjs.zencdn.net/8.5.2/video.min.js"></script>
-    <script src="app.js"></script>
-
-</body>
-</html>
+<style>
+/* 示例 CSS 样式，用于源切换列表 */
+.source-list {
+    list-style: none;
+    padding-left: 20px;
+    margin: 0;
+    display: none; /* 默认隐藏 */
+}
+.source-list.visible {
+    display: block; /* 点击主链接后显示 */
+}
+.channel-group {
+    border-bottom: 1px solid #333;
+    padding: 5px 0;
+}
+.main-channel-link.active {
+    font-weight: bold;
+    color: #4CAF50; /* 播放中的频道高亮 */
+}
+.source-list a {
+    font-size: 0.9em;
+    color: #999;
+}
+</style>
