--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </aside>
 
 <section id="player-container">
-            <video id="tv-player" class="video-js vjs-default-skin" controls preload="auto" poster="">
+            <video id="tv-player" class="video-js vjs-default-skin" controls preload="auto">
                 <p class="vjs-no-js">
                     要查看此视频，请启用 JavaScript。
                 </p>
@@ -45,4 +45,5 @@
 
 </body>
 </html>
+
 
