--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             // !!! 关键配置: Cloudflare Worker 代理地址 !!!
             // ==========================================================
             // 确保这里是您的 Worker 的 HTTPS 地址，末尾包含斜杠 "/"。
-            const WORKER_PROXY_BASE_URL = ''; 
+            const WORKER_PROXY_BASE_URL = 'https://m3u.521986.xyz/'; 
 
             /**
              * 更新状态信息
@@ -483,4 +483,5 @@
     </script>
 </body>
 </html>
+
 
